file reduced maximum

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         <div canvas="container" style="padding:0px;">
             <div id="loaderbackground" ng-show="loadingimage">
                 <div id="loader">
-                    <img src="css/loading/loader_default.gif" height="100%" width="100%"></img><br>
+                    <img src="css/loading/loader.gif" height="100%" width="100%"></img><br>
                     <span style="background-color:white;opacity:1;"><b>Loading...</b></span>
                 </div>
             </div>
