--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1,height=device-height, target-densitydpi=medium-dpi,width=device-width">
         <title>Contact Backup</title>
+        <link rel="stylesheet" href="lib/css/slidebars.css">
+       <link rel="stylesheet" href="lib/css/style.css">
         <link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css"></link>
         <link rel="stylesheet" type="text/css" href="lib/css/jansy-bootstrap.min.css"></link>
         <link rel="stylesheet" type="text/css" href="css/index.css"></link>
@@ -14,8 +16,6 @@
         <script type="text/javascript" src="js/services/api_controller.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <link rel="stylesheet" href="lib/css/slidebars.css">
-		<link rel="stylesheet" href="lib/css/style.css">
     </head>
     <body ng-controller="home_controller" ng-init="displaynames=devicecontactsnames;refreshcontacts();" >
         <div off-canvas="slidebar-1 left reveal" id="Menus" ng-init="selecteditem1='active';" style="padding:0px;">
@@ -33,8 +33,8 @@
                     <span style="background-color:white;opacity:1;"><b>Loading...</b></span>
                 </div>
             </div>
-            <div class="navbar navbar-inverse navbar-fixed-top">
-                <div style="padding:0px;padding-left:10px;">
+            <div class="navbar navbar-inverse navbar-fixed-top" style="position:fixed;top:0px;left:0px;" >
+                <div  style="padding:0px;padding-left:10px;">
                     <button type="button" class="navbar-toggle js-toggle-left-slidebar pull-left" style="margin-right:0px;" data-toggle="offcanvas" data-target="#Menus" data-canvas="body">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -76,17 +76,17 @@
                     </thead>
                 </table>
             </div>
-            <div id="tablebody">
+            <div id="tablebody" ng-init="name='Name :';number='Number :';">
                 <table class="table table-hover">
                     <tbody id="result">
                          <tr ng-repeat="contact in retrivedcontacts | filter:searchtext">
                             <td class="col-sm-1 col-xs-1 col-md-1" ng-bind="$index+1"></td>
                             <td class="col-sm-10 col-xs-10 col-md-10" style="font-size:16px;padding-left:8px;padding-right:5px;">
                                 <div>
-                                    <div><b><span ng-bind="Name :"></span> </b><span style="padding-left:2px;" ng-bind="contact.contactName"></span></div>
+                                    <div><b><span ng-bind="name"></span> </b><span style="padding-left:2px;" ng-bind="contact.contactName"></span></div>
                                 </div>
                                 <div>
-                                    <div><b><span ng-bind="Number :"></span> </b><span style="padding-left:2px;" ng-bind="contact.contactNo"></span></div>
+                                    <div><b><span ng-bind="number"></span> </b><span style="padding-left:2px;" ng-bind="contact.contactNo"></span></div>
                                 </div>
                             </td>
                             <td class="col-sm-1 col-xs-1 col-md-1" style="padding-left:0px;padding-right:5px;padding-top:10px;padding-bottom:10px;">
