--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./lib/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./lib/js/angular.js"></script>
+    <script type="text/javascript" src="./lib/js/angular.min.js"></script>
     <script type="text/javascript" src="./js/controllers/login_controller.js"></script>
     <script type="text/javascript" src="./js/services/api_controller.js"></script>
   </head>
