--- a/home.html
+++ b/home.html
@@ -6,19 +6,20 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1,height=device-height, target-densitydpi=medium-dpi,width=device-width">
         <title>Contact Backup</title>
         <link rel="stylesheet" href="lib/css/slidebars.css">
-       <link rel="stylesheet" href="lib/css/style.css">
+        <link rel="stylesheet" href="lib/css/style.css">
         <link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css"></link>
         <link rel="stylesheet" type="text/css" href="lib/css/jansy-bootstrap.min.css"></link>
         <link rel="stylesheet" type="text/css" href="css/index.css"></link>
         <script type="text/javascript" src="lib/js/angular.min.js"></script>
         <script type="text/javascript" src="lib/js/jquery-1.12.4.min.js"></script>
+        <script type="text/javascript" src="lib/js/jasny-bootstrap.min.js"></script>    
         <script type="text/javascript" src="js/controllers/home_controller.js"></script>
         <script type="text/javascript" src="js/services/api_controller.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body ng-controller="home_controller" ng-init="displaynames=devicecontactsnames;refreshcontacts();" >
-        <div off-canvas="slidebar-1 left reveal" id="Menus" ng-init="selecteditem1='active';" style="padding:0px;">
+<!--        <div off-canvas="slidebar-1 left reveal" id="Menus" ng-init="selecteditem1='active';" style="padding:0px;">
 			<img src="img/logo.png" height="50px" width="100%;"></img>
             <ul class="nav nav-pills nav-stacked" id="menulist">
                 <li class="js-toggle-left-slidebar {{selecteditem1}}"><a href=""  ng-click="displaynames=devicecontactsnames;item=1;selectmenuitem(item);menuonecount=menuonecount+1;checkfirstselected(menuonecount);"><b>Home</b></a></li>
@@ -26,14 +27,14 @@
                 <li class="js-toggle-left-slidebar {{selecteditem3}}"><a href=""  ng-click="item=3;selectmenuitem(item);logoutsession();" ><b>Logout</b></a></li>
             </ul>
 		</div>
-        <div canvas="container" style="padding:0px;">
+        <div canvas="container" style="position: absolute; z-index: 1; left: 0; top: 0;padding:0px;" >
             <div id="loaderbackground" ng-show="loadingimage">
                 <div id="loader">
                     <img src="css/loading/loader.gif" height="100%" width="100%"></img><br>
                     <span style="background-color:white;opacity:1;"><b>Loading...</b></span>
                 </div>
             </div>
-            <div class="navbar navbar-inverse navbar-fixed-top" style="position:fixed;top:0px;left:0px;" >
+            <div class="navbar navbar-inverse navbar-fixed-top" >
                 <div  style="padding:0px;padding-left:10px;">
                     <button type="button" class="navbar-toggle js-toggle-left-slidebar pull-left" style="margin-right:0px;" data-toggle="offcanvas" data-target="#Menus" data-canvas="body">
                         <span class="icon-bar"></span>
@@ -47,8 +48,32 @@
                         </button>
                     </div>
                 </div>
+            </div>-->
+            displaynames=devicecontactsnames;item=1;selectmenuitem(item);menuonecount=menuonecount+1;checkfirstselected(menuonecount);
+            <nav id="Menus" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation" style="width:70%;background-color:#1B2A4B;" ng-init="selecteditem1='active';">
+              <img src="img/logo.png" height="50px" width="100%;"></img>
+                <ul class="nav nav-pills nav-stacked" id="menulist">
+                    <li class="{{selecteditem1}}"><a href="" data-toggle="offcanvas" data-target="#Menus" ng-click="displaynames=devicecontactsnames;item=1;selectmenuitem(item);menuonecount=menuonecount+1;checkfirstselected(menuonecount);"><b>Home</b></a></li>
+                    <li class="{{selecteditem2}}"><a href="" data-toggle="offcanvas" data-target="#Menus" ng-click="displaynames=uploadedcontactsnames;item=2;selectmenuitem(item);menutwocount=menutwocount+1;checksecondselected(menutwocount);"><b>Uploaded Contacts</b></a></li>
+                    <li class="{{selecteditem3}}"><a href="" data-toggle="offcanvas" data-target="#Menus" ng-click="item=3;selectmenuitem(item);logoutsession();" ng-dblclick="return false;"><b>Logout</b></a></li>
+                </ul>
+            </nav>
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div style="padding:0px;padding-left:10px;">
+                    <button type="button" class="navbar-toggle pull-left" style="margin-right:0px;" data-toggle="offcanvas" data-target="#Menus" data-canvas="body">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div style="padding-top:10px;padding-bottom:10px;padding-right:5px;">
+                        <span style="color:white;font-size:20px;padding-left:5px;" ng-bind="displaynames.title"></span>
+                        <button type="button" class="btn btn-primary btn-sm pull-right" ng-click="actiontobeperformedonallcontacts();" ng-disabled="!retrivedcontacts.length">
+                            <span style="color:white" ng-bind="displaynames.selectall"></span>
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div style="padding:0px;">
+            <div style="padding:0px;" >
                 <table class="table table-hover" id="headertable">
                     <thead>
                         <tr>
@@ -67,7 +92,7 @@
                         <tr>
                             <th style="padding:0px;width:0px;">
                             </th>
-                            <th class="col-sm-12 col-xs-12 col-md-12" style="padding:2px;">
+                            <th class="col-sm-12 col-xs-12 col-md-12" style="padding:0px;">
                                 <input type="text" style="width:100%;font-size:16px;font-family:Lucida Sans;padding:2px;" ng-model="searchtext" ng-disabled="loadingimage" placeholder="Search for Contacts here..."></input>
                             </th>
                             <th style="width:0px;padding:0px;">
@@ -77,27 +102,34 @@
                 </table>
             </div>
             <div id="tablebody" ng-init="name='Name :';number='Number :';">
-                <table class="table table-hover">
-                    <tbody id="result">
-                         <tr ng-repeat="contact in retrivedcontacts | filter:searchtext">
-                            <td class="col-sm-1 col-xs-1 col-md-1" ng-bind="$index+1"></td>
-                            <td class="col-sm-10 col-xs-10 col-md-10" style="font-size:16px;padding-left:8px;padding-right:5px;">
-                                <div>
-                                    <div><b><span ng-bind="name"></span> </b><span style="padding-left:2px;" ng-bind="contact.contactName"></span></div>
-                                </div>
-                                <div>
-                                    <div><b><span ng-bind="number"></span> </b><span style="padding-left:2px;" ng-bind="contact.contactNo"></span></div>
-                                </div>
-                            </td>
-                            <td class="col-sm-1 col-xs-1 col-md-1" style="padding-left:0px;padding-right:5px;padding-top:10px;padding-bottom:10px;">
-                                <button type="button" ng-click="actiontobeperformedonthiscontact(contact,$index);" ng-disabled="doesExist(contact);" class="btn btn-sm {{displaynames.style}}" style="height:35px;padding-top:2px;padding-bottom:2px;" ng-bind="displaynames.select"></button>
-                            </td>
-                        </tr>
-                    </tbody>
-                    <div class="alert alert-danger" ng-show="!(retrivedcontacts | filter:searchtext).length" id="noresults">No results found !!</div>
-                </table>
+                <div canvas="container" style="padding:0px;">
+                    <table class="table table-hover">
+                        <div id="loaderbackground" ng-show="loadingimage">
+                            <div id="loader">
+                                <img src="css/loading/loader.gif" height="100%" width="100%"></img><br>
+                                <span style="background-color:white;opacity:1;"><b>Loading...</b></span>
+                            </div>
+                        </div>
+                        <tbody id="result">
+                            <div class="alert alert-danger" ng-show="!(retrivedcontacts | filter:searchtext).length" id="noresults">No results found !!</div>
+                             <tr ng-repeat="contact in retrivedcontacts | filter:searchtext">
+                                <td class="col-sm-1 col-xs-1 col-md-1" ng-bind="$index+1"></td>
+                                <td class="col-sm-10 col-xs-10 col-md-10" style="font-size:16px;padding-left:8px;padding-right:5px;">
+                                    <div>
+                                        <div><b><span ng-bind="name"></span> </b><span style="padding-left:2px;" ng-bind="contact.contactName"></span></div>
+                                    </div>
+                                    <div>
+                                        <div><b><span ng-bind="number"></span> </b><span style="padding-left:2px;" ng-bind="contact.contactNo"></span></div>
+                                    </div>
+                                </td>
+                                <td class="col-sm-1 col-xs-1 col-md-1" style="padding-left:0px;padding-right:5px;padding-top:10px;padding-bottom:10px;">
+                                    <button type="button" ng-click="actiontobeperformedonthiscontact(contact,$index);" ng-disabled="doesExist(contact);" class="btn btn-sm {{displaynames.style}}" style="height:35px;padding-top:2px;padding-bottom:2px;" ng-bind="displaynames.select"></button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-		</div>
 		<script src="js/slidebars.js"></script>
 		<script src="js/scripts.js"></script> 
     </body>
