--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
                 </table>
             </div>
             <div id="tablebody" ng-init="name='Name :';number='Number :';">
-                <div canvas="container" style="padding:0px;">
+                <div canvas="container" style="padding:0px;padding-bottom:105px;">
                     <table class="table table-hover">
                         <div id="loaderbackground" ng-show="loadingimage">
                             <div id="loader">
