--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <tbody id="result">
-                            <div class="alert alert-danger" ng-if="retrivedcontacts" ng-show="!(retrivedcontacts | filter:searchtext).length" id="noresults">No results found !!</div>
+                            <div class="alert alert-danger" ng-show="!(retrivedcontacts | filter:searchtext).length" id="noresults">No results found !!</div>
                              <tr ng-repeat="contact in retrivedcontacts | filter:searchtext">
                                 <td class="col-sm-1 col-xs-1 col-md-1" ng-bind="$index+1"></td>
                                 <td class="col-sm-10 col-xs-10 col-md-10" style="font-size:16px;padding-left:8px;padding-right:5px;">
