--- a/login.html
+++ b/login.html
@@ -60,7 +60,9 @@
                 </label>
                 <input type="email" ng-pattern='/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/' name="email" ng-model="signup_email" required autocomplete="off"/>
               </div>
-              <button type="submit" ng-disabled="submittedsignup" ng-dblclick="return false;" class="button button-block"/>Get Started</button>
+              <button type="submit" ng-disabled="submittedsignup" ng-dblclick="return false;" class="button button-block"/>
+              <span style="padding:0px;"><img ng-show="signuploading" src="css/loading/login_loader.gif" height="35px" width="35px"><span style="padding-top:5px;">Get Started</span></img></span></button>
+              </button>
               </form>
         </div>
         <div id="login">   
@@ -89,7 +91,8 @@
                 <input type="password"  ng-model="login_password" required autocomplete="off" ng-change="validate=false;validateemail=false;"/>
               </div>
               <p class="forgot"><a href="#">Forgot Password?</a></p>
-              <button type="submit" ng-disabled="submitted" ng-dblclick="return false;" class="button button-block"/>Log In</button>
+              <button type="submit" ng-disabled="submitted" ng-dblclick="return false;" class="button button-block"/>
+              <span style="padding:0px;"><img ng-show="loginloading" src="css/loading/login_loader.gif" height="35px" width="35px"><span style="padding-top:5px;">Log In</span></img></span></button>
               </form>
             </div>
           </div><!-- tab-content -->
