back button rewinding fixed

--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="./lib/js/angular.min.js"></script>
     <script type="text/javascript" src="./js/controllers/login_controller.js"></script>
     <script type="text/javascript" src="./js/services/api_controller.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
   </head>
   <body ng-controller="Contacts_sync_controller">
     <div class="form" id="main" style="padding-bottom:20px;">
