--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css"></link>
         <script type="text/javascript" src="lib/js/angular.min.js"></script>
         <script type="text/javascript" src="./lib/js/googleclient.js"></script>
-        <script type="text/javascript" src="lib/js/jquery.min.js"></script>
+        <script type="text/javascript" src="lib/js/jquery-1.12.4.min.js"></script>
         <script type="text/javascript" src="lib/js/jasny-bootstrap.min.js"></script>
         <script type="text/javascript" src="js/controllers/home_controller.js"></script>
         <script type="text/javascript" src="js/services/api_controller.js"></script>
